Bug 116799 - UI: Border selection icon tool in sidebar disappearing (white square)
Summary: UI: Border selection icon tool in sidebar disappearing (white square)
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
6.1.0.0.alpha0+
Hardware: All Windows (All)
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:6.1.0
Keywords: bibisected, bisected, regression
Depends on:
Blocks:
 
Reported: 2018-04-04 14:49 UTC by Telesto
Modified: 2018-04-10 07:24 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
Bibisect log (2.73 KB, text/plain)
2018-04-04 17:52 UTC, Telesto
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Telesto 2018-04-04 14:49:03 UTC
Description:
UI: Border selection icon tool in sidebar disappearing (white square)

Steps to Reproduce:
1. Open Calc
2. Sidebar -> Properties deck -> Cell Appearance deck
3. Hoover over the backgroud icon

Actual Results:  
White square

Expected Results:
Icon


Reproducible: Always


User Profile Reset: No



Additional Info:
Version: 6.1.0.0.alpha0+
Build ID: 03a6be9dda966a8d16f271480c7be0d6d69ee39e
CPU threads: 4; OS: Windows 6.3; UI render: default; 
TinderBox: Win-x86@42, Branch:master, Time: 2018-04-03_23:11:47
Locale: nl-NL (nl_NL); Calc: CL


User-Agent: Mozilla/5.0 (Windows NT 6.3; WOW64; rv:52.0) Gecko/20100101 Firefox/52.0
Comment 1 V Stuart Foote 2018-04-04 17:36:04 UTC
On Windows 10 Ent 64-bit en-US with
Version: 6.1.0.0.alpha0+ (x64)
Build ID: 83204c1fbf2cb85f3a22a922411ed8291cfb3fe8
CPU threads: 8; OS: Windows 10.0; UI render: default; 
TinderBox: Win-x86_64@42, Branch:master, Time: 2018-03-29_01:08:27
Locale: en-US (en_US); Calc: group

The representation of the borders does show, but not for all border assignments.

Seems mostly correct in building the icon.

The No Border representation is what shows as the white icon.

The right, left, top, bottom and all borders shows when refreshed (i.e. select No Border, and then the border format as applied to the selection). 

Seems the double and heavy borders are not symbolized in the icon preview. Also, neither the Diagonal Up nor Diagonal Down border has any symbolism in the border(s) icon.

Needs a bit more work...
Comment 2 Telesto 2018-04-04 17:52:29 UTC
Created attachment 141091 [details]
Bibisect log

Bisected to

author	Noel Grandin <noel.grandin@collabora.co.uk>	2018-02-16 13:32:47 +0200
committer	Noel Grandin <noel.grandin@collabora.co.uk>	2018-02-16 19:51:05 +0100
commit fe96d07621f75e6e5a106407c8ef80ace1b7f137 (patch)
tree 2c282c165e93ad7fe259e63dda4d249882bbc90e
parent bddd6c77811e0489a5632437116f5eec356cc397 (diff)
move CellBorderUpdater bitmap update to VirtualDevice
part of the process of making Bitmap an internal detail of vcl/

and remove last outside-of-vcl use of BitmapWriteAccess from
header file.

https://cgit.freedesktop.org/libreoffice/core/commit/?id=fe96d07621f75e6e5a106407c8ef80ace1b7f137
Comment 3 Telesto 2018-04-04 17:53:07 UTC
Adding CC to Noel Grandin
Comment 4 Noel Grandin 2018-04-05 15:18:27 UTC
Note that there is at least two bugs here: 

One bug is the one I caused, and which I'll have a fix for shortly, where the code that draws the border lines over the main toolbox icon is not working properly.

The other bug is that sometimes selecting a different thing in the drop-down does not update the main icon. For some reason, sometimes that event does not get called. This part of the bug exists at least as far back as 
the 6.0.1.1 release, and affects both Windows and Linux(Gnome).

Perhaps Telesto can see if the second part can be bisected further?
Comment 5 Telesto 2018-04-05 15:48:15 UTC
> The other bug is that sometimes selecting a different thing in the drop-down
> does not update the main icon. For some reason, sometimes that event does
> not get called. This part of the bug exists at least as far back as 
> the 6.0.1.1 release, and affects both Windows and Linux(Gnome).

Probably unfinished work or an implementation error. It's also in:
Versie: 4.1.0.4 
Build ID: 89ea49ddacd9aa532507cbf852f2bb22b1ace28

And thinking about it, this same deck should be in Writer too (for consistency reason)
Comment 6 Commit Notification 2018-04-05 19:40:19 UTC
Noel Grandin committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=ad0d1db3ce862ef74a7a1849b821f5010f9ba3fd

tdf#116799 Border selection icon tool in sidebar disappearing

It will be available in 6.1.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 Xisco Faulí 2018-04-10 07:24:07 UTC
@Noel, should it be backported to 6-0?