tdf#116799 Border selection icon tool in sidebar disappearing

regression from

    commit fe96d07621f75e6e5a106407c8ef80ace1b7f137
    move CellBorderUpdater bitmap update to VirtualDevice

Change-Id: I9a021b121b6da5d387ee710363b301543a31582e